--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "rebecca",
         "Sachini",
         "Senanayake",
+        "springboot",
         "Vidyalaya",
         "Vinodya",
         "vollyball"
